src/test/ui/issues/issue-34418.stderr
error: compilation successful
  --> $DIR/issue-34418.rs:21:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

